--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+* {
+  border: 1px dashed black;
+}
+
 #board {
   margin-top: 10px;
 }
@@ -5,4 +9,8 @@
 .box {
   border: 1px solid black;
   height: 150px;
+}
+
+.marker {
+  margin: 0 auto;
 }
